UY-1298 Upgrade HomeUI to Vaadin 23 - rewrite trusted applications view